ISSUE #36 - added small padding to the list of projects

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -622,6 +622,10 @@ hr {
 
 /*Project items*/
 
+.account-projects {
+	margin-left: 15px;
+}
+
 .project-title{
 	position: relative;
 	background-color: #FFF;
