--- a/views/ng-templates/home.jade
+++ b/views/ng-templates/home.jade
@@ -1,8 +1,8 @@
 #wrap
 	.container-fluid
-		.row.padded-top
+		.row
 			// Left column
-			.col-md-3
+			.col-md-3.unpadded
 				// Profile pic and name
 				.row
 					.col-md-12
