--- a/views/ng-templates/home.jade
+++ b/views/ng-templates/home.jade
@@ -12,16 +12,26 @@
 				// Menu
 				.row
 					.col-md-12
-						span(ng-class="{'project-menu-section-selected': isView('projects')}", ng-show="isView('settings')")
+						span(ng-show="isView('settings')")
 							a(href='', ng-click="setView('projects')")
-								button.btn.btn-primary.btn-profile.pull-right
+								button.btn.btn-primary.btn-profile
 									i.fa.fa-home
 									|  Projects
-						span(ng-class="{'project-menu-section-selected': isView('settings')}", ng-show="isView('projects')")
+						span(ng-show="isView('projects')")
 							a(href='', ng-click="setView('settings')")
-								button.btn.btn-primary.btn-profile.pull-right
+								button.btn.btn-primary.btn-profile
 									i.fa.fa-gear
 									|  Edit Profile
+						span(ng-show="isView('projects') && projectsShowList")
+							a(href='', ng-click="toggleProjectsView()")
+								button.btn.btn-primary.btn-profile.pull-right
+									i.fa.fa-th-large
+									|  Thumbnails
+						span(ng-show="isView('projects') && !projectsShowList")
+							a(href='', ng-click="toggleProjectsView()")
+								button.btn.btn-primary.btn-profile.pull-right
+									i.fa.fa-list
+									|  List
 				.row
 					.col-md-12
 						.profile-box
@@ -31,7 +41,8 @@
 			// Main content
 			#profile-settings.col-md-9
 				// Dashboard
-				div.row(ng-show="view=='projects'")
+				// List of projects
+				#projects-list.row(ng-show="view=='projects' && projectsShowList")
 					.col-xs-12
 						div(ng-repeat="(account, projects) in Data.UserData.projectsGrouped")
 							h3 {{account}}
@@ -41,7 +52,16 @@
 										i.fa.fa-cube.menu-icon
 										span.commit-number
 											a(ng-href="{{'/' + account + '/' + project}}") {{project}}
-
+				// project thumbnails
+				#projects-thumbnails.row(ng-show="view=='projects' && !projectsShowList")
+					.col-xs-12.unpadded.js-masonry(data-masonry-options='{ "itemSelector": ".item-masonry", "columnWidth": ".grid-sizer", "gutter": 0, "percentPosition": true}')
+						.grid-sizer
+						div.item-masonry.project-thumbnail(ng-repeat="project in Data.UserData.projects")
+							a(ng-href="{{'/' + project.account + '/' + project.project}}")
+								img.img-responsive(src="/public/images/dummies/kc.jpg")
+								.item-masonry-description
+									{{project.project}}
+									// p {{project.description}}
 				//div(ng-show="view=='dashboard'")
 					.col-md-6.gutter-right
 						.block
