ISSUE #55 - Fixed the Wayfinder record mode

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -32,6 +32,10 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/config.js")
 		script(type="text/javascript" src="/public/js/tree.js")
 		script(type="text/javascript" src="/public/js/floatingmeta.js")
+
+		script(type="text/javascript" src="/public/js/waypoint/draw.js")
+		script(type="text/javascript" src="/public/js/waypoint/record.js")
+		script(type="text/javascript" src="/public/js/waypoint.js")
 		script(type="text/javascript" src="/public/js/viewer.js")
 		script(type="text/javascript" src="/public/js/oculus.js")
 		script(type="text/javascript" src="/public/js/gamepad.js")
