--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1202,6 +1202,31 @@ header button.btn {
 	cursor: pointer;
 }
 
+#tools-menu-icon {
+	position: absolute;
+	bottom: 0;
+	left: -100px;
+	padding: 10px;
+	cursor: pointer;
+	color: #ffffff;
+}
+
+.tools-menu-items {
+	color: #ffffff;
+	padding: 10px;
+	background-color: rgb(45,45,45);
+}
+
+.dropdown-submenu {
+	top: 0;
+	right: 100%;
+	position: relative;
+}
+
+.dropdown-submenu:hover {
+	display: block;
+}
+
 .arrow-up {
 	width: 0;
 	height: 0;
@@ -1464,3 +1489,15 @@ ul.fancytree-container li {
 	width: 100%;
 	height: 30%;
 }
+
+#viewerMessageBox {
+    margin: auto;
+    top: 50%;
+    position: relative;
+    text-align: center;
+    background-color: RGBA(45,45,45,0.5);
+    padding: 10px;
+    max-width: 200px;
+    min-width: 100px;
+}
+
