--- a/views/ng-templates/mainpage.jade
+++ b/views/ng-templates/mainpage.jade
@@ -54,6 +54,8 @@
 
 	#project-viewport-container.row
 		div#x3d.project-viewport
+			include waypoint_readme
+			include waypoint_select
 	.ui2(ng-controller='ViewCtrl')
 		#ui2-treeview.collapsed
 			div#ui2-treeview-collapse-btn.pull-right.panel-collapse-btn(ng-click="toggleTree()")
@@ -75,46 +77,46 @@
 						li Navigation
 						li.divider
 						li
-							a(ng-click='viewer.setNavMode("WALK")') 
+							a(ng-click='setViewerMode("WALK")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'WALK'") 
 								span Walk
 						li
-							a(ng-click='viewer.setNavMode("EXAMINE")') 
+							a(ng-click='setViewerMode("EXAMINE")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'EXAMINE'") 
 								span Examine
 						li
-							a(ng-click='viewer.setNavMode("FLY")') 
+							a(ng-click='setViewerMode("FLY")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'FLY'") 
 								span Fly
 						li
-							a(ng-click='viewer.setNavMode("TURNTABLE")') 
+							a(ng-click='setViewerMode("TURNTABLE")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'TURNTABLE'")
 								span Turntable
 						li
-							a(ng-click='viewer.setNavMode("HELICOPTER")') 
+							a(ng-click='setViewerMode("HELICOPTER")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'HELICOPTER'")
 								span Helicopter
 						li
-							a(ng-click='viewer.setNavMode("WAYFINDER")') 
+							a(ng-click='setViewerMode("WAYFINDER")') 
 								i.fa.fa-check(ng-show="viewer.currentNavMode == 'WAYFINDER'")
 								span Wayfinder
 						li.divider
 						li Viewpoints
 						li.divider
 						li
-							a(ng-click='viewer.showAll()')
+							a(ng-click='showAll()')
 								span Show All
 						li
-							a(ng-click='viewer.reset()')
+							a(ng-click='reset()')
 								span Go To Viewpoint
 						li
-							a(ng-click='viewer.flyThrough(viewer.viewpoints)')
+							a(ng-click='flyThrough()')
 								i.fa.fa-power-off(ng-show="viewer.isFlyingThrough")
 								span Fly Through
 						li.divider
 						div(ng-repeat="viewpoint in viewer.viewpoints track by viewpoint.name")
 							li
-								a(ng-click='viewer.setCurrentViewpoint(viewpoint.idx)')
+								a(ng-click='setCurrentViewpoint(viewpoint.idx)')
 									i.fa.fa-check(ng-show="viewer.selectedViewpoint == viewpoint.idx")
 									span {{viewpoint.name}}
 						li.divider
@@ -122,15 +124,15 @@
 							li Wayfinder
 							li.divider
 							li
-								a(ng-click="waypoint.setNavMode('RECORD')")
+								a(ng-click="setWaypointMode('RECORD')")
 									i.fa.fa-check(ng-show="waypoint.currentNavMode == 'RECORD'")
 									span Record Mode
 							li
-								a(ng-click="waypoint.setNavMode('VIEWING')")
+								a(ng-click="setWaypointMode('VIEWING')")
 									i.fa.fa-check(ng-show="waypoint.currentNavMode == 'VIEWING'")
 									span Viewing
 							li
-								a(ng-click="waypoint.setNavMode('FLYTHROUGH')")
+								a(ng-click="setWaypointMode('FLYTHROUGH')")
 									i.fa.fa-check(ng-show="waypoint.currentNavMode == 'FLYTHROUGH'")
 									span Fly Through
 				button.btn(ng-hide='!Auth.loggedIn', ng-click="logOut()")
