ISSUE #55   - More fixes to the backend state machine 	    - Beginnings of a layout manager for the viewers

--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -1,6 +1,7 @@
 doctype html
 html(lang="en" ng-app="3drepo").ng-scope
 	head
+		base(href="/")
 		// Meta, title, CSS, favicons, etc.
 		meta(charset='utf-8')
 		meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -37,6 +38,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/waypoint/record.js")
 		script(type="text/javascript" src="/public/js/waypoint.js")
 		script(type="text/javascript" src="/public/js/viewer.js")
+		script(type="text/javascript" src="/public/js/viewermanager.js")
 		script(type="text/javascript" src="/public/js/oculus.js")
 		script(type="text/javascript" src="/public/js/gamepad.js")
 		script(type="text/javascript" src="/public/js/collision.js")
@@ -59,6 +61,7 @@ html(lang="en" ng-app="3drepo").ng-scope
 		script(type="text/javascript" src="/public/js/angularjs/data/CurrentDiffRevision.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Federation.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Log.js")
+		script(type="text/javascript" src="/public/js/angularjs/data/Wayfinder.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/ProjectData.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/Readme.js")
 		script(type="text/javascript" src="/public/js/angularjs/data/RevisionsByDay.js")
