--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1143,6 +1143,7 @@ header button.btn {
 
 .collapsed #ui2-treeview-collapse-btn {
 	right: -40px;
+	z-index: 20000;
 }
 
 #ui2-treeview-collapse-btn i {
@@ -1186,6 +1187,7 @@ header button.btn {
 
 .collapsed #ui2-metadata-collapse-btn {
 	left: -40px;
+	z-index: 20000;
 }
 
 #oculus-mode-icon {
@@ -1237,16 +1239,19 @@ header button.btn {
 	top: -22px;
 }
 
+/* Bottom panel: (default state) both the tree panel and the metadata collapsed */
 #bottom-panel {
 	background-color: #ffffff;
 	position: fixed;
 	top: 60px;
-	left: 25%;
-	width: 50%;
+	left: 0;
+	width: 100%;
 	height: 100%;
 	max-width: none;
 	-webkit-transition: all linear 0.1s;
 	transition: all linear 0.1s;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 #bottom-panel.collapsed {
@@ -1259,11 +1264,44 @@ header button.btn {
 	font-size: 8pt;
 	top: 0;
 	height: 35px;
-	width: 80%;
-	left: 10%;
+	width: 50%;
+	left: 25%;
 	-webkit-transition: all linear 0.1s;
 	transition: all linear 0.1s;
+}
 
+/* Bottom panel: both tree and metadata expanded */
+#bottom-panel.with-tree.with-metadata {
+	left: 25%;
+	width: 50%;
+}
+
+#bottom-panel.with-tree.with-metadata .bottom-tabs {
+	width: 80%;
+	left: 10%;
+}
+
+/* Bottom panel: tree expanded, but metadata collapsed */
+#bottom-panel.with-tree {
+	width: 75%;
+	left: 25%;
+	padding-left: 0;
+}
+
+#bottom-panel.with-tree .bottom-tabs {
+	width: 53%;
+	left: 23.5%;
+}
+
+/* Bottom panel: tree collapsed, but metadata expanded */
+#bottom-panel.with-metadata {
+	width: 75%;
+	padding-right: 0;
+}
+
+#bottom-panel.with-metadata .bottom-tabs {
+	width: 53%;
+	left: 23.5%;
 }
 
 .collapsed .bottom-tabs {
