--- a/views/ng-templates/waypoint_readme.jade
+++ b/views/ng-templates/waypoint_readme.jade
@@ -1,4 +1,4 @@
-.container.float#readme.readme(ng-show="showReadme")
+.container.float#readme.readme(ng-show="Data.ui.wayfinder.readme")
 	.row
 		.col-md-6.col-md-offset-3.col-sm-6.col-sm-offset-3#readme-box.panel.panel-default
 			.row
