--- a/views/frontend.jade
+++ b/views/frontend.jade
@@ -20,8 +20,10 @@ html(lang="en" ng-app="3drepo").ng-scope
 		// Predefine the app
 		script.
 			angular.module('3drepo', ['ui.router', 'ui.bootstrap', 'ui.multiselect'])
+			.constant('structure', !{structure})
 			.constant('parentStates', !{parentStateJSON})
-			.constant('pluginLevels', !{pluginLevelsJSON});
+			//.constant('pluginLevels', !{pluginLevelsJSON})
+			.constant('uiState', !{uistate});
 
 		// Plugin JS Files
 		each val in pluginJS
