--- a/views/ng-templates/info.jade
+++ b/views/ng-templates/info.jade
@@ -1,5 +1,4 @@
 .col-md-12.bottom-info
-	ng-include(src="'menu.html'")
 	.col-sm-12.margined
 		p Owner: {{Data.ProjectData.owner}}
 	.col-sm-12.margined
@@ -14,7 +13,7 @@
 
 	.col-sm-12.margined
 		// Display the processed markdown from readme
-		div(markdown='Data.Readme.text')
+		div(markdown='Data.ViewData.Readme.text')
 
 	// Diff selector
 	//.row.tight
