--- a/views/ui/diffselector.jade
+++ b/views/ui/diffselector.jade
@@ -1,13 +1,17 @@
-div#revisions-selector
-	#diffSpan(ng-show="Data.state.diffEnabled")
+div#diff-selector(ng-controller='DiffSelectorCtrl')
+	#diffToggle.nav-project-title(ng-show="ui.diffselector")
+		a(href='#', ng-click="toggleDiff()")
+			i.fa.fa-random 
+				| DIFF
+	#diffSpan(ng-show="diffEnabled")
 		.btn-group.menu-button
 			button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
 				i.fa.fa-code-fork.menu-icon
 				span.button-title Branch:
-				span.button-keyword {{Data.CurrentDiffBranch.name}}
+				span.button-keyword {{Data.DiffData.CurrentDiffBranch.name}}
 				span.caret
 			ul.dropdown-menu(role='menu')
-				li(ng-repeat='branch in Data.Branches.branches')
+				li(ng-repeat='branch in Data.SelectorData.Branches.branches')
 					a(href='#', ng-click='setDiffBranch(branch)')
 						span.button-keyword {{branch}}
 		span.revision
@@ -15,10 +19,10 @@ div#revisions-selector
 				button.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-expanded='false')
 					i.fa.fa-tag.menu-icon
 					span.button-title Revision:
-					span.button-keyword {{Data.CurrentDiffRevision.shortName}}
+					span.button-keyword {{Data.DiffData.CurrentDiffRevision.shortName}}
 					span.caret
 				ul.dropdown-menu(role='menu')
-					li(ng-repeat='rev in Data.CurrentDiffBranch.revisions')
-						a(href='#', ng-click='setDiff(rev)')
+					li(ng-repeat='rev in Data.DiffData.CurrentDiffBranch.revisions')
+						a(href='#', ng-click='setDiffRevision(rev)')
 							span.button-keyword {{rev.name}}
 
