ISSUE #55    - Fixed tree and meta data panels 	     - Re-wrote camera to avoid conflict with x3dom 	     - Almost fixed viewpoint calculation

--- a/plugins/inspect/camera.jade
+++ b/plugins/inspect/camera.jade
@@ -4,5 +4,6 @@ block title
 	span Scan QR Code
 
 block content
-	video#videocamera.dialogs(autoplay, camera-switch='cameraSwitch')
+	div(ng-controller='InspectCtrl')
+		video#videocamera.dialogs(autoplay, capture='captureQRCode', camera-switch='cameraSwitch')
 
