--- a/plugins/tree/tree.jade
+++ b/plugins/tree/tree.jade
@@ -1,6 +1,2 @@
-#ui2-treeview.collapsed(ng-controller="TreeCtrl", ng-show="ui.tree")
-	#ui2-treeview-collapse-btn.pull-right.panel-collapse-btn(ng-click="toggleTree()")
-		i.fa.fa-list
-	.treeview
-		#scenetree
-
+.treeview(ng-controller='TreeCtrl')
+	#scenetree
